--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="payments_detail_amount_title">Amount</string>
     <string name="payments_detail_currency_title">Currency</string>
     <string name="payments_detail_description_title">Description</string>
+    <string name="logout">LogOut</string>
 </resources>
